--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "*",
-    "socket.io": "*",
+    "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0"
   },
   "bugs": {
