--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "*",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io": "*",
+    "socket.io-client": "*"
   },
   "bugs": {
     "url": "https://github.com/colenocks/Multiplayer_Snake_Game_EIS/issues"
