still debugging web.config

--- a/web.config
+++ b/web.config
@@ -1,6 +1,16 @@
 <configuration>
-<system.webServer>
-    <rewrite>
+
+    <system.webServer>
+
+        <handlers>
+
+            <!-- indicates that the app.js file is a node.js application to be handled by the iisnode module -->
+
+            <add name="iisnode" path="server.js" verb="*" modules="iisnode" />
+
+        </handlers>
+
+        <rewrite>
       <rules>
         <rule name="Main Rule" stopProcessing="true">
                 <match url=".*" />
@@ -12,5 +22,6 @@
             </rule>
         </rules>
     </rewrite>
-</system.webServer>
+
+        </system.webServer>
 </configuration>
