--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Icardi",
   "license": "MIT",
   "dependencies": {
+    "bower": "^1.8.8",
     "express": "*",
     "socket.io": "*",
     "socket.io-client": "*"
